EVNT-46 - Fix build for java 17